--- a/tests-mocha/index.html
+++ b/tests-mocha/index.html
@@ -55,8 +55,8 @@
     <script src="../dist/indexeddbshim-noninvasive.js"></script>
     <script>
     /* globals setGlobalVars */
-    setGlobalVars(null, {
-        addNonIDBGlobals: true
+    setGlobalVars($, {
+        addNonIDBGlobals: 70122224
     });
     </script>
     <!--<script src="../src/Init.js"></script>-->
